@@ -1,3 +1,10 @@
+2006-04-11  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add links for zoom-* icons
+	Partial patch from Luca Ferretti <elle.uca@libero.it>
+
+	Fixes https://bugs.freedesktop.org/show_bug.cgi?id=6506
+
 2006-03-05  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: Move folder_open link to folder-open icon
